Orthogonal support added. Build event added for shaders.

--- a/OpenTKArcballReplicate/OpenTKArcballReplicate.csproj
+++ b/OpenTKArcballReplicate/OpenTKArcballReplicate.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="call ../hw.bat" />
+    <Exec Command="xcopy /s /y Shaders\* $(OutDir)Shaders\" />
   </Target>
 
 </Project>
